added EncryptionService, JWTService, LoginRequest, LoginResponse, WebSecurityConfig and made some changes to the previous classes to implement user login logic with jwt

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,15 @@ spring:
     prefix:
     check-template-location: false
 
+encryption:
+  salt:
+    rounds: 10
+
+jwt:
+  algorithm:
+    key: SuperSecureSecretKey
+  issuer: eCommerce
+  expiryInSeconds: 604800
 
 
 #  mail:
