--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,7 +48,7 @@ springdoc:
   swagger-ui:
     filter: true
     operations-sorter: method
-
+    tags-sorter: alpha
 # Encryption configuration
 encryption:
   salt:
